# ChangeLog for www-plugins/adobe-flash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*adobe-flash-10.1.53.21 (24 Apr 2010)

  24 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl>
  -adobe-flash-10.1.53.7.ebuild, +adobe-flash-10.1.53.21.ebuild:
  Version bump.

  18 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl>
  adobe-flash-10.1.53.7.ebuild:
  Removed cruft lines.

*adobe-flash-10.1.53.7 (18 Apr 2010)

  18 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl>
  -adobe-flash-10.1.51.95.ebuild, +adobe-flash-10.1.53.7.ebuild:
  Version bump.

*adobe-flash-10.1.51.95 (15 Mar 2010)

  15 Mar 2010; Piotr Szymaniak <lazy_bum@o2.pl>
  +adobe-flash-10.1.51.95.ebuild:
  Ugly hack only for the best ricers.
