@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl>
+  adobe-flash-10.1.53.21.ebuild:
+  Updated ebuild.
+
 *adobe-flash-10.1.53.21 (24 Apr 2010)
 
   24 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl>
